update swagger.json manually
